[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/images/playerShip2_green.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.8069, 39 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.2403, 31.0538 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.196078, 0, 1 )

[sub_resource type="CircleShape2D" id=4]
radius = 250.0

[node name="Enemy" type="Area2D"]
collision_layer = 4
collision_mask = 18
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
z_index = 1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -20, 4 )
rotation = 0.959931
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 20, 6 )
rotation = -0.959931
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -30.0
margin_top = 50.0
margin_right = 30.0
margin_bottom = 55.0
custom_styles/fg = SubResource( 3 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerDistance" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDistance"]
shape = SubResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
